(lang dune 3.5)

(name ADT)

(generate_opam_files true)

(source
 (github Mepy/ADT))

(authors "Mepy")

(maintainers "Mepy")

(license MIT)


(package
 (name ADT)
 (depends ocaml dune)
 (tags (ADT)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-project
